Fixed vertical alignment of minus and plus buttons in sidebar.

--- a/src/main/resources/com/k15t/scroll/scroll-webhelp-theme/shared/assets/sass/import/_ht-sidebar.scss
+++ b/src/main/resources/com/k15t/scroll/scroll-webhelp-theme/shared/assets/sass/import/_ht-sidebar.scss
@@ -251,7 +251,7 @@
             font-size: 0px;
             left: auto;
             width: 0;
-            top: 0px;
+            top: 7px;
             right: 6px;
             display: block;
             width: 24px;
